// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test normalizer test asset.json 1`] = `
Object {
  "id": "8VoLF5Jla5JcMnhNV74Oj",
  "title": "test",
  "url": "https://images.ctfassets.net/f5bx295b472q/8VoLF5Jla5JcMnhNV74Oj/4f3afcf599ffbcc55528e2026e40cd0d/Screenshot_2019-07-18_at_16.39.23.png",
}
`;

exports[`test normalizer test rendr_page.json 1`] = `
Page {
  "blocks": Array [],
  "cache": Object {
    "ttl": 0,
  },
  "head": Object {
    "defaultTitle": "-",
    "htmlAttributes": Object {},
    "link": "",
    "meta": Array [
      Object {
        "content": "digital, awesome",
        "name": "keywords",
      },
      Object {
        "content": "Homepage",
        "name": "description",
      },
    ],
    "title": "Ekino Homepage",
    "titleTemplate": "%s",
  },
  "id": "4QrVSXjiXz6iSS9Vli7sDh",
  "path": "/",
  "settings": Object {
    "foo": "bar",
  },
  "statusCode": 200,
  "template": "default",
  "type": "document",
}
`;

exports[`test normalizer test rendr_page_missing_field.json 1`] = `
Page {
  "blocks": Array [],
  "cache": Object {
    "ttl": 0,
  },
  "head": Object {
    "defaultTitle": "-",
    "htmlAttributes": Object {},
    "link": "",
    "meta": Array [
      Object {
        "content": "digital, awesome",
        "name": "keywords",
      },
      Object {
        "content": "Homepage",
        "name": "description",
      },
    ],
    "title": "Ekino Homepage",
    "titleTemplate": "%s",
  },
  "id": "4QrVSXjiXz6iSS9Vli7sDh",
  "path": "/",
  "settings": Object {},
  "statusCode": 200,
  "template": "default",
  "type": "document",
}
`;

exports[`test normalizer test rendr_website.json 1`] = `
Object {
  "countryCode": "FRA",
  "culture": "en_GB",
  "domains": Array [
    "www.ekino.com",
  ],
  "enabled": true,
  "id": "75Vqk3IpfxlzQfvhdSASZV",
  "name": "Ekino.com",
  "order": 1,
  "path": "/",
}
`;

exports[`test normalizer with default values with normalizer 1`] = `
Object {
  "data": 1,
  "name": "2CV",
  "speed": 10,
  "wheel": Object {
    "brand": "michelin",
    "size": 17,
  },
}
`;
